--- a/client/src/components/featured/featured.scss
+++ b/client/src/components/featured/featured.scss
@@ -1,5 +1,8 @@
 @import "../../app.scss";
 
+$breakpoint-tablet: 768px;
+$breakpoint-mobile: 560px;
+
 .featured {
   height: 76vh;
   position: relative;
@@ -107,9 +110,18 @@
     box-shadow: 0 0 10px black;
     z-index: 3;
 
+    @media (min-width: $breakpoint-tablet) {
+      transform: translate(-50%, -50%) scale(.8);
+    }
+
     video {
       min-width: 80%;
       margin-left: 50px;
+
+      @media (min-width: $breakpoint-tablet) {
+        min-width: 70%;
+        margin-left: 50px;
+      }
     }
 
     .itemInfo {
@@ -119,6 +131,10 @@
       background: #333;
       min-width: 20%;
       margin-right: 50px;
+
+      @media (min-width: $breakpoint-tablet) {
+        min-width: 30%;
+      }
 
       .icons {
         display: flex;
@@ -142,49 +158,14 @@
 
       .desc {
         margin-top: 10%;
+
+        @media (min-width: $breakpoint-tablet) {
+          overflow-y: scroll;
+        }
       }
 
       .genre {
         margin: 15px 0 0 0;
-      }
-    }
-  }
-}
-
-$breakpoint-tablet: 768px;
-
-@media (min-width: $breakpoint-tablet) {
-  .bigInfos {
-    position: fixed;
-    display: flex;
-    padding-left: 50px;
-    top: 50%;
-    left: 50%;
-    width: 50%;
-    height: 50%;
-    background: rgb(29, 28, 28);
-    color: white;
-    transform: translate(-50%, -50%);
-    box-shadow: 0 0 10px black;
-    z-index: 3;
-
-    video {
-      min-width: 70%;
-      margin-left: 50px;
-    }
-
-    .itemInfo {
-      display: flex;
-      flex-direction: column;
-      padding: 30px 15px;
-      background: #333;
-      min-width: 30%;
-      margin-right: 50px;
-
-      .itemInfoTop {
-        .desc {
-          overflow-y: scroll;
-        }
       }
     }
   }
