Update material-ui - add play and pause for video info component

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -7,7 +7,14 @@
   text-decoration: none;
 }
 
-@mixin tablet {
+
+@mixin tablet-big {
+  @media (max-width: 1239px) {
+    @content;
+  }
+}
+
+@mixin tablet-little {
   @media (max-width: 768px) {
     @content;
   }
